Fixed profile section overlay issue on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,7 +108,7 @@ Project tab
 
 .sidebar {
     position: sticky;
-    top: 60px;
+    top: 20px;
     max-height: max-content;
     height: 100%;
     margin-bottom: 0;
